modules/tf-ecs/security.tf
resource "aws_security_group" "lb_sg" {
  name        = "${var.name}-lb-sg"
  description = "controls access to the ALB"
  vpc_id      = var.vpc_id

  ingress {
    protocol    = "tcp"
    from_port   = 80
    to_port     = 80
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    protocol    = "tcp"
    from_port   = 443
    to_port     = 443
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow all outbound traffic by default"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Traffic to the ECS cluster should only come from the ALB
resource "aws_security_group" "ecs_service_sg" {
  name        = "${var.name}-ecs-service-sg"
  description = "Security group for ECS service"
  vpc_id      = var.vpc_id

  egress {
    description = "Allow all outbound traffic by default"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group_rule" "lb_to_ecs" {
  description              = "Load balancer to ECS service"
  type                     = "ingress"
  from_port                = var.app_port
  to_port                  = var.app_port
  protocol                 = "tcp"
  security_group_id        = aws_security_group.ecs_service_sg.id
  source_security_group_id = aws_security_group.lb_sg.id
}

# resource "aws_security_group_rule" "allow_icmp" {
#   description              = "Allow all ICMP traffic from within the vpc"
#   type                     = "ingress"
#   from_port                = -1
#   to_port                  = -1
#   protocol                 = "icmp"
#   security_group_id        = aws_security_group.ecs_service_sg.id
#   source_security_group_id = aws_security_group.lb_sg.id
#   cidr_blocks              = [var.vpc_ip_cidr]
#}
